[tool.poetry]
name = "ambient-wx"
version = "0.1.3"
description = "API Wrapper for the Ambient Weather Station API with meteorological units and pandas functionality as well"
keywords = ["weather", "ambient weather"]
authors = ["Barry Martin <barry.martin@thepythongeek.com>"]
readme = "README.md"
packages = [{include = "ambient_wx", from = "src"}]
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.urls]
Homepage = "https://github.com/bvmcode/ambient_wx"
Source = "https://github.com/bvmcode/ambient_wx"
Issues = "https://github.com/bvmcode/ambient_wx/issues"


[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.26.4"
pandas = "2.2.2"
pint = "0.23"
requests = "2.31.0"


[tool.poetry.group.dev.dependencies]
black = "24.4.2"
flake8 = "7.0.0"
isort = "5.13.2"
pyproject-flake8 = "7.0.0"
pytest = "8.2.0"
pytest-sugar = "1.0.0"
responses = "0.25.0"
coverage = "^7.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"

[tool.black]
line-length = 100
target-version = ['py312']
skip-string-normalization = true

[tool.flake8]
max-line-length = 100
per-file-ignores = "__init__.py:F401"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 100

